feat: add sumcheck protocol and implementation

--- a/fiat_shamir/Cargo.toml
+++ b/fiat_shamir/Cargo.toml
@@ -1,8 +1,6 @@
 [package]
-name = "mult_poly"
+name = "fiat_shamir"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ark-bn254 = "0.5.0"
-ark-ff = "0.5.0"
