--- a/sumcheck_impl/Cargo.toml
+++ b/sumcheck_impl/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "mult_poly"
+name = "sumcheck_impl"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
+ark-poly = "0.5.0"
+rand = "0.9.0"
+sha3 = "0.10.8"
