--- a/sumcheck/Cargo.toml
+++ b/sumcheck/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "sumcheck_impl"
+name = "proof"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
-ark-poly = "0.5.0"
-rand = "0.9.0"
 sha3 = "0.10.8"
+prime_polynomail = { path = "../prime_fields/prime_polynomail"}
+
