--- a/gkr/Cargo.toml
+++ b/gkr/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "circuits"
+name = "gkr"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
-rand = "0.9.0"
 multilinear = { path = "../multilinear"}
