--- a/circuit/Cargo.toml
+++ b/circuit/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "cir"
+name = "circuit"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
-multilinear = { path = "../multilinear"}
-
+rand = "0.9.0"
