--- a/gkr/Cargo.toml
+++ b/gkr/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 ark-bn254 = "0.5.0"
 ark-ff = "0.5.0"
 multilinear = { path = "../multilinear"}
+prime_polynomail = { path = "../prime_polynomail"}
+transcript = { path = "../transcript"}
+circuit = { path = "../circuit"}
+rand = "0.9.0"
