--- a/gkr/Cargo.toml
+++ b/gkr/Cargo.toml
@@ -9,5 +9,5 @@ ark-ff = "0.5.0"
 multilinear = { path = "../multilinear"}
 prime_polynomail = { path = "../prime_polynomail"}
 transcript = { path = "../transcript"}
-circuit = { path = "../circuit"}
+sumcheck = { path = "../sumcheck"}
 rand = "0.9.0"
