--- a/gkr/Cargo.toml
+++ b/gkr/Cargo.toml
@@ -11,3 +11,4 @@ prime_polynomail = { path = "../prime_polynomail"}
 transcript = { path = "../transcript"}
 sumcheck = { path = "../sumcheck"}
 rand = "0.9.0"
+sha3 = "0.10.8"
